fix ActionBar tittle. Create NewCategoryActivity, CategoryAdapter, categories_list.xml and new_category.xml. Add new method getCategories to CategoryTaskDataSource.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">ToDo</string>
+
+    <!--  Title  -->
+    <string name="add_category">Add Category</string>
+
+    <!--  Text View  -->
+    <string name="new_category">New Category</string>
+
+    <!--  Button  -->
+    <string name="confirm">Confirm</string>
+
+    <!--  Hint  -->
+    <string name="category_name">category name</string>
+
 </resources>
