add SeekBar for number priority to new_task.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <!--  Text View  -->
     <string name="new_category">New Category</string>
     <string name="new_task">New Task</string>
+    <string name="priority">Priority</string>
 
     <!--  Button  -->
     <string name="confirm">Confirm</string>
@@ -16,6 +17,5 @@
     <!--  Hint  -->
     <string name="category_name">category name</string>
     <string name="task_name">task name</string>
-    <string name="priority">priority</string>
 
 </resources>
