create TasksNotificationActivity, TaskNotificationAdapter and tasks_notification.xml. Add new column setAlarm to tasks table. Delete TaskItemAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <!--  Button  -->
     <string name="confirm">Confirm</string>
     <string name="set_due_date">Set Due Date</string>
+    <string name="rememberMe">Remember Me</string>
 
     <!--  Hint  -->
     <string name="category_name">category name</string>
