set adapter to listview in RemoveCategoryActivity. Add new variable 'checked' to Category class. Make remove category button works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="new_category">New Category</string>
     <string name="new_task">New Task</string>
     <string name="priority">Priority</string>
+    <string name="categories_to_be_removed">Categories to be removed</string>
 
     <!--  Button  -->
     <string name="confirm">Confirm</string>
